# e3rl

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
e3rl/algorithms/: actor_critic.py  agent.py  d4pg.py  ddpg.py  dpg.py  dppo.py  dsac.py  dtd3.py  hybrid.py  ppo.py  sac.py  td3.py
e3rl/env/: gym_env.py  pole_balancing.py  pomdp.py  rslgym_env.py
e3rl/modules/: categorical_network.py  gaussian_chimera_network.py  gaussian_network.py  implicit_quantile_network.py  network.py  quantile_network.py
e3rl/runners/: legacy_runner.py  runner.py
e3rl/storage/: replay_storage.py  rollout_storage.py  storage.py
e3rl/utils/: __init__.py  device.py  recurrency.py  utils.py
examples/: benchmark.py  example.py  tune.py  tune_cfg.py
examples/hyperparams/: __init__.py  dppo.py
tests/: test_algorithms.py  test_dpg.py  test_dppo.py  test_dppo_iqn.py  test_dppo_recurrency.py  test_ppo.py  test_ppo_recurrency.py  test_quantile_network.py  test_trajectory_conversion.py  test_transformer.py
