[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e3rl"
version = "0.1.0"
description = "Fast and simple RL algorithms implemented in PyTorch."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Lukas Schneider", email = "lukas@luschneider.com" }]
keywords = ["reinforcement-learning", "pytorch", "rl", "robotics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "torch",
]

[project.optional-dependencies]
gym = ["gym"]
logging = ["tensorboard", "wandb", "GitPython"]
export = ["onnx"]
dev = ["ruff", "pre-commit"]
docs = ["sphinx", "sphinx-rtd-theme"]

[project.urls]
Homepage = "https://github.com/lukas-schneider/e3rl"
Repository = "https://github.com/lukas-schneider/e3rl"

[tool.setuptools.packages.find]
include = ["e3rl*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [".vscode", "docs"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "SIM", "RET"]
ignore = [
    "E402",
    "E501",
    "E203",
    "RET504",
    "RET505",
    "SIM102",
    "SIM117",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["e3rl"]
extra-standard-library = ["numpy", "torch", "tensordict", "warp", "typing_extensions", "git"]
